feat: added get from Facts* endpoint
